avoid the "unsafe" areas behind notches screen

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -41,6 +41,8 @@ body {
     height:100%;
     margin:0px;
     padding:0px;
+    /* Padding to avoid the "unsafe" areas behind notches in the screen */
+    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px);
     text-transform:uppercase;
     width:100%;
 }
